--- a/Client/package.json
+++ b/Client/package.json
@@ -8,7 +8,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
-    "react-window": "^1.8.5"
+    "react-window": "^1.8.5",
+    "typescript": "^3.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
